# folune

./: .gitignore  Makefile  README.md
apps/folune-ui/: CMakeLists.txt  main.c
buildroot-external/: Config.in  external.desc  external.mk
buildroot-external/configs/: folune_qemu_defconfig
buildroot-external/package/folune-app/: Config.in  S50folune  folune-app.mk
buildroot-external/package/folune-ui/: Config.in  folune-ui.mk
buildroot-external/package/lvgl/: Config.in  lv_conf.h  lvgl.hash  lvgl.mk
crates/folune-app/: Cargo.toml
crates/folune-app/src/: main.rs
docker/: Dockerfile
scripts/: build.sh  run-qemu.sh
